--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/LocalBusiness">
     <head>
-        <meta itemprop="name" content="Mineshafter server">
-        <meta itemprop="description" content="Best minecraft server ever! With rails )">
-        <meta itemprop="image" content="/media/images/Minecraft.png">
-
+        <meta itemprop="image" content="/media/images/grooplayer.jpg">
         <meta charset="utf-8" />
-        <title>Mineshafter.ru</title>
-        <link id="favicon" rel="shortcut icon" href="/media/images/Minecraft.png">
+        <title>Grooplayer</title>
+        <link id="favicon" rel="shortcut icon" href="/media/images/grooplayer.png">
         <link href='http://fonts.googleapis.com/css?family=Play:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Comfortaa:700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <script language="JavaScript"  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -15,43 +12,66 @@
 
         <link rel="stylesheet" href="/media/css/base.css" media="all">
         <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
-        <meta name="description" content="Best mineshafer server for ever" />
-        <meta name="keywords" content="minecraft,mineshafter,creeper" />
     </head>
 
 <body>
-    <div id="pano"></div>
+
     <div id="navigator">
-        <!--<img src="/media/images/Minecraft_l.png"/> -->
-        <h1><a id="logo_text" style="text-decoration: none; font-size: 1em" href="/">Mine<span>shafter.ru</span><a></h1>
-        <a href="/news/">News<a>
-        <a href="/">About<a>
-        <a href="/forum/forums/">Forums<a>
-        <a href="/factions/">Factions<a>
+	    <div id="logo">Grooplayer</div>
+        <a class="menu" href="/news/">News</a>
+        <a class="menu" href="/">Playlist<a>
+        <a class="menu" href="/">All music<a>
+        <a class="menu" href="/player/">Top 50</a>
         <br/>
         {% if user.is_authenticated %}
-        <a href="/logout/">Log out<a>
+        <a href="/logout/">Log out</a>
         {% endif %}
+        <br/>
+        
+        <div class="playing" id="current_song">
+           	<div style="height: 100%; position: absolute; font-size: 8em; text-align: right; margin-left: 12%; z-index: -2; color: rgba(255,255,255,0.1)">
+    			{{ status.bitrate }}
+    		</div>
+   			 <h4>Now playing</h4>
+   			 <span id="artist">{{ current_song.artist }}</span><br/>
+    		 <span id="playing">#{{ current_song.id }} {{ current_song.title }}</span><br/>
+    		 <span id="album">Album: {{ current_song.album }} ({{ current_song.date }})</span><br/>
+    		 File: /music/{{ current_song.file }}<br/>
+			<br/>
+			<div class="controls">
+				<a href="/control/pause">
+					<img src="/media/images/pause.png"/>
+				</a>
+				<a href="/control/stop">
+					<img src="/media/images/stop.png"/>
+				</a>
+				<a href="/control/play">
+					<img src="/media/images/play.png"/>
+				</a>
+			</div>
+    	</div>    		 
+
+		{% if next_song %}
+    	<div class="playing" id="next_song">
+    	 <h4>Next</h4>
+    		<span id="artist">{{ current_song.artist }}</span><br/>
+    		<span id="playing">#{{ next_song.id }} {{ next_song.artist }}: {{ next_song.title }} ({{ next_song.album }})</span>
+    	</div>
+    	{% endif %}
+    	
     </div>
+   
     <div id="content">
       <div id="inner">
       
         {% block "content" %}
         <div class="poster">
-            <h2>We are opened!</h2>
-            <p>You are always welcome<p>
-            <p>Use the <b>mineshafter.ru</b> as server name for connect to game server</p>
-            <img src="/media/images/road.jpg" /><br/>
-            <h2>Admins</h2>
-            <p>There are only 2 admins on the server. Me (<b>bigbnn</b>) and <b>Gamedevils1</b></p>
-            <img src="/media/images/admins.jpg" />
-            <h2>Freedom</h2>
-            <p>We dont say u what you must to do, we can say only what you can't do</p>
-            <img src="/media/images/home.jpg" />
-            <br/>
-            <img src="/media/images/proz2.jpg" />
- 			<br/>
- 			<img src="/media/images/elite.jpg" />
+           <h2>Playlist</h2>
+           <ol>
+           	{% for song in playlist  %}
+           		<li {% if song.pos = current_song.pos %} id="current" {% endif %}  value="{{ song.id }}" ><a href="/play/{{ song.id}}">{{ song.title }}</a></li>
+           	{% endfor %}
+           </ol>
         </div>
         {% endblock %}
         	{% if not user.is_authenticated %}
