--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,13 @@
         <link id="favicon" rel="shortcut icon" href="/media/images/grooplayer.png">
         <link href='http://fonts.googleapis.com/css?family=Play:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Comfortaa:700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+ 
         <script language="JavaScript"  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script language="JavaScript"  type="text/javascript" src="/media/base.js"></script>
+        <script language="JavaScript"  type="text/javascript" src="/media/jquery.raty.min.js"></script>
 
         <link rel="stylesheet" href="/media/css/base.css" media="all">
+        <link rel="stylesheet" href="/media/css/s" media="all">
         <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
     </head>
 
@@ -19,8 +22,8 @@
     <div id="navigator">
 	    <div id="logo">Grooplayer</div>
         <a class="menu" href="/news/">News</a>
-        <a class="menu" href="/">Playlist<a>
-        <a class="menu" href="/">All music<a>
+        <a class="menu" href="/">Playlist</a>
+        <a class="menu" href="/">All music</a>
         <a class="menu" href="/player/">Top 50</a>
         <br/>
         {% if user.is_authenticated %}
@@ -28,14 +31,15 @@
         {% endif %}
         <br/>
         
+        {% if current_song %}
         <div class="playing" id="current_song">
-           	<div style="height: 100%; position: absolute; font-size: 8em; text-align: right; margin-left: 12%; z-index: -2; color: rgba(255,255,255,0.1)">
+           	<div style="height: 100%; position: absolute; font-size: 8em; text-align: right; margin-left: 12%; z-index: -2; color: rgba(255,255,255,0.06)">
     			{{ status.bitrate }}
     		</div>
    			 <h4>Now playing</h4>
-   			 <span id="artist">{{ current_song.artist }}</span><br/>
+   			 {% if current_song.artist %} <span id="artist">{{ current_song.artist }}</span><br/>{% endif %}
     		 <span id="playing">#{{ current_song.id }} {{ current_song.title }}</span><br/>
-    		 <span id="album">Album: {{ current_song.album }} ({{ current_song.date }})</span><br/>
+    		 {% if current_song.album %}<span id="album">Album: {{ current_song.album }} {% if current_song.date %} ({{ current_song.date }}){% endif %}</span><br/>{% endif %}
     		 File: /music/{{ current_song.file }}<br/>
 			<br/>
 			<div class="controls">
@@ -49,13 +53,21 @@
 					<img src="/media/images/play.png"/>
 				</a>
 			</div>
-    	</div>    		 
+			
+    	</div>    
+    	{% endif %}		 
 
 		{% if next_song %}
     	<div class="playing" id="next_song">
     	 <h4>Next</h4>
-    		<span id="artist">{{ current_song.artist }}</span><br/>
-    		<span id="playing">#{{ next_song.id }} {{ next_song.artist }}: {{ next_song.title }} ({{ next_song.album }})</span>
+    		{% if next_song.artist %}<span id="artist">{{ next_song.artist }}</span>{% endif %}<br/>
+    		<span id="playing">#{{ next_song.id }} {{ next_song.title }} ({{ next_song.album }})</span>
+    		<br/><br/>
+    		<div class="controls">
+				<a href="/play/{{ next_song.id }}">
+					<img src="/media/images/play.png"/>
+				</a>
+			</div>
     	</div>
     	{% endif %}
     	
