platorm for library

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 	    <div id="logo">Grooplayer</div>
         <a class="menu" href="/news/">News</a>
         <a class="menu" href="/">Playlist</a>
-        <a class="menu" href="/">All music</a>
+        <a class="menu" href="/library/">Library</a>
         <a class="menu" href="/player/">Top 50</a>
         <br/>
         {% if user.is_authenticated %}
