--- a/media/css/base.css
+++ b/media/css/base.css
@@ -25,3 +25,75 @@ li a{color: #AABB99; text-decoration: none}
 .playing #playing {border-radius: 4px; color: white; font-size: 2em}
 
 #next_song {background: rgba(255,225,215,0.1)}
+
+section {
+  width: 150px;
+  height: auto;
+  margin: 100px auto 0;
+  position: absolute;
+}
+
+#slider{
+  border-width: 1px;
+  border-style: solid;
+  border-color: #333 #333 #777 #333;
+  border-radius: 25px;
+  width: 100px;
+  position: absolute;
+  height: 13px;
+  background-color: #8e8d8d;
+  background: url('/media/images/bg-track.png') repeat top left;
+  box-shadow: inset 0 1px 5px 0px rgba(0, 0, 0, .5),
+           0 1px 0 0px rgba(250, 250, 250, .5);
+  left: 20px;
+}
+
+.tooltip {
+  position: absolute;
+  display: block;
+  top: -25px;
+  width: 35px;
+  height: 20px;
+  color: #fff;
+  text-align: center;
+  font: 10pt Tahoma, Arial, sans-serif ;
+  border-radius: 3px;
+  border: 1px solid #333;
+  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, .3);
+  box-sizing: border-box;
+  background: linear-gradient(top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%);
+}
+
+.volume {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  right: -5px;
+  background: url('/media/images/volume.png') no-repeat 0 -50px;
+  position: absolute;
+  margin-top: -5px;
+}
+
+#slider .ui-slider-handle {
+  position: absolute;
+  z-index: 2;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  background: url('/media/images/handle.png') no-repeat 50% 50%;
+  font-weight: bold;
+  color: #1C94C4;
+  outline: none;
+  top: -7px;
+  margin-left: -12px;
+  border: none;
+}
+
+#slider .ui-slider-range {
+  background: linear-gradient(top, #ffffff 0%,#eaeaea 100%);
+  position: absolute;
+  border: 0;
+  top: 0;
+  height: 100%;
+  border-radius: 25px;
+}
