--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div id="navigator">
-	    <div id="logo">Grooplayer</div>
+	    <div id="logo"><a href="/">Grooplayer</a></div>
         <a class="menu" href="/news/">News</a>
         <a class="menu" href="/">Playlist</a>
         <a class="menu" href="/library/">Library</a>
