--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,16 +3,23 @@
 {% block "content" %}
 	<div class="poster">
 		<h2>Profile</h2>
+		
+		<h3>My files</h3>
+ 
+           	{% for song in tracks  %}
+           		<div class="box" value="{{ song.id }}" >
+           			<div class="right tright half">
+						<a class="button reddy dislike">{{ song.dislikes }}</a>
+						<a class="button greeny like">{{ song.likes }}</a>
+					</div>
+           			{{ song.filename }}
+           			<div class="clean"></div>
+           		</div>
+           	{% endfor %}
 
-		<div class="form" title="Upload new file" opened="false">
+       <div class="form" title="Upload new file" opened="false">
 	 		{% csrf_token %}
 			{{ form.as_ul }}
-		</div>
-
-           <ol>
-           	{% for song in tracks  %}
-           		<li value="{{ song.id }}" >{{ song.title }}</li>
-           	{% endfor %}
-           </ol>
+	   </div>
 	</div>
 {% endblock %}
