--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -2,4 +2,5 @@
 {% block "content" %}
 <h1>Registration complete</h1>
 Thank you for your time. Activation email has been sended to your email address.
+Неправда, не ушел он на твой ящик, я сам ручками активирую, просто скажи )
 {% endblock %}
