--- a/media/css/base.css
+++ b/media/css/base.css
@@ -2,7 +2,7 @@ html {height: 100%; background: #000 url("/media/images/style.jpg") no-repeat fi
 body {height: 96%; margin: 1em 2em; width: 96%}
 p{color: #A1C3B4;}
 h1 {color: white; margin-right: 0; padding-right: 0;}
-small {color: #83A36F}
+
 h1 span {color: #EFEF9E}
 h3:first-letter{text-transform:uppercase}
 
@@ -10,7 +10,7 @@ h3:first-letter{text-transform:uppercase}
 .form ul, .form li {display: block; padding: none; margin: none}
 .form label {display: block; width: 20%; float: left;  margin-right: 1%}
 .submit {margin-left: 21%;}
-.button {padding: 1%; background: rgba(255,255,255,0.2); border-radius: 3px; border: solid 1px rgba(0,0,0,0.2); line-height: 200%; cursor: pointer; text-decoration: none; color: #ddedFd}
+.button {padding: 1%; background: rgba(0,0,0,0.4); border-radius: 3px; text-align: center; line-height: 200%; cursor: pointer; text-decoration: none; color: #ddedFd; margin-right: 1px}
 .button:hover {padding: 1%; background: rgba(255,255,255,0.4); border-radius: 3px; border: solid 1px rgba(0,0,0,0.4);; line-height: 200%; cursor: pointer}
 .button img {vertical-align: top}
 .left {float: left}
@@ -24,100 +24,66 @@ h3:first-letter{text-transform:uppercase}
 .small {font-size: small}
 .half {width: 50%}
 .song:hover {background: rgba(255,255,230,0.3);}
-#navigator {width: 35%; float: left; text-align: left; position: fixed; }
-a.menu {display: block; font-size: 24px; color: #EFEFEE; float: left; margin-right: 2%}
-#content {width: 54%; float: left; text-align: justify;  margin-left: 33%}
-#content .inner {padding: 1em 1em; background: rgba(255,255,255,0.06); border-radius: 2px; }
+
+#navigator {width: 58%; position: fixed}
+
+a.menu {cursor:pointer; display: block; font-size: 1.4em; color: #EFEFEE; float: left;
+    margin-right: 1px;
+    text-decoration: none;
+    border-radius: 1px;
+    padding: 1% 1%;
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0.13) 0%, rgba(0,0,0,0.24) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.13)), color-stop(100%,rgba(0,0,0,0.24))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0.13) 0%,rgba(0,0,0,0.24) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(255,255,255,0.13) 0%,rgba(0,0,0,0.24) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(255,255,255,0.13) 0%,rgba(0,0,0,0.24) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(255,255,255,0.13) 0%,rgba(0,0,0,0.24) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21ffffff', endColorstr='#3d000000',GradientType=0 ); /* IE6-9 */
+
+}
+#content {
+width: 37%;
+position: absolute;
+text-align: justify;
+margin-left: 60%;
+background: rgba(0, 0, 0, 0.84);
+z-index: 800;
+padding-top: 100%; margin-top: -100%; padding-bottom: 100%; margin-bottom: -100%;
+}
+
+#content .inner {  border-radius: 1px; }
 #content img {border: solid black 4px}
 
 #logo {font-size: 2.3em;color: #FFEFAA; font-family: Comfortaa;}
 #logo a{text-decoration: none; color: #FFEFAA}
-#current {color: white; background: rgba(255,255,0,0.2); }
-.song {cursor: pointer;}
+.current {color: #FFF; background: rgba(88,18,169,0.6);}
+.song {cursor: pointer; padding: 2% 4%}
+.pending {background: #00366e}
+.totals {cursor: pointer; padding: 2% 4%; background: #000000; font-weight: bold;}
+.totals img,.song img{margin-top: -4px}
 .login {top: 1%; right: 1%; position: fixed}
 .errorlist {color: red; margin: 0; padding: 0; list-style: none; font-size: small; margin-left: 21%}
 
 li a{color: #AABB99; text-decoration: none}
-.playing {border-radius: 2px; background: rgba(255,225,215,0.2); padding: 1em 1em; margin-right: 1em; width: 80%; font-size: small; margin-bottom: 1em}
+.playing {border-radius: 2px;  padding: 1em 1em; margin-right: 1em;  font-size: small; margin-bottom: 1em}
 .playing h4 {margin: 0; margin-bottom: 1em; text-decoration: none; display: block; border-radius: 1px; background: rgba(255,255,255,0.1); padding: 1%; color: white}
-.controls {text-decoration: none; display: block; border-radius: 1px; background: rgba(255,255,255,0.1); color: white; text-align: right}
+.current_tab  { background: rgba(0,0,0,0.44) !important; z-index: 2}
+.controls {text-decoration: none; display: block; border-radius: 1px; background: rgba(0,0,0,0.5); color: white; text-align: right}
 .controls img {vertical-align: top}
 .playing #playing {border-radius: 2px; color: white; font-size: 1.5em}
 
 #next_song {background: rgba(255,225,215,0.1)}
 .box{border-radius: 2px; background: rgba(255,225,215,0.2); padding: 1em 1em; width: 92%; margin-bottom: 1em}
 
-section {
-  width: 150px;
-  height: auto;
-  margin: 100px auto 0;
-  position: absolute;
-}
-
-#slider{
-  border-width: 1px;
-  border-style: solid;
-  border-color: #333 #333 #777 #333;
-  border-radius: 25px;
-  width: 100px;
-  position: absolute;
-  height: 13px;
-  background-color: #8e8d8d;
-  background: url('/media/images/bg-track.png') repeat top left;
-  box-shadow: inset 0 1px 5px 0px rgba(0, 0, 0, .5),
-           0 1px 0 0px rgba(250, 250, 250, .5);
-  left: 20px;
-}
-
-.tooltip {
-  position: absolute;
-  display: block;
-  top: -25px;
-  width: 35px;
-  height: 20px;
-  color: #fff;
-  text-align: center;
-  font: 10pt Tahoma, Arial, sans-serif ;
-  border-radius: 3px;
-  border: 1px solid #333;
-  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, .3);
-  box-sizing: border-box;
-  background: linear-gradient(top, rgba(69,72,77,0.5) 0%,rgba(0,0,0,0.5) 100%);
-}
-
-.volume {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  right: -5px;
-  background: url('/media/images/volume.png') no-repeat 0 -50px;
-  position: absolute;
-  margin-top: -5px;
-}
-
-#slider .ui-slider-handle {
-  position: absolute;
-  z-index: 2;
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-  background: url('/media/images/handle.png') no-repeat 50% 50%;
-  font-weight: bold;
-  color: #1C94C4;
-  outline: none;
-  top: -7px;
-  margin-left: -12px;
-  border: none;
-}
-
-#slider .ui-slider-range {
-  background: linear-gradient(top, #ffffff 0%,#eaeaea 100%);
-  position: absolute;
-  border: 0;
-  top: 0;
-  height: 100%;
-  border-radius: 25px;
-}
-
 #track_info {float: left; width: 68%; margin-right: 2%}
 #track_image {float: left; width: 30%}
+#poster {z-index: 2}
+/* Slide */
+.slide {z-index: -5; float: left; position: fixed; width: 58%; float: left; min-height: 400px; max-height: 600px; overflow-y: auto;  background: rgba(0,0,0,.44);  font-size: small; }
+#current_song, .extra_padding {padding: 2% 4%}
+.placeholder {width: 100%; margin-top: 20%; text-align: center;color: rgba(255,255,255,0.5)}
+.none {display: none}
+.red {color: #ff3c00}
+.green {color: greenyellow}
+
+.modal {position: fixed; left: 15%; top: 25%; width: 20%; text-align: center; border: rgba(255,255,255,.8) solid 2px; padding: 5%; background: rgba(0,0,0,.9)}
